force-app/main/default/objects/Pipeline_Deal__c/Pipeline_Deal__c.object-meta.xml
<CustomObject>
    <description>Gestión integral del pipeline: New Business, Legal, DD, Integration y Go Live.</description>
    <label>Pipeline Deal</label>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Pipeline Deal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>