force-app/main/default/objects/Pipeline_Deal__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>