force-app/main/default/objects/Pipeline_Deal__c/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <label>Brands</label>
    <length>255</length>
    <type>Text</type>
</CustomField>