force-app/main/default/objects/Pipeline_Deal__c/fields/DD__c.field-meta.xml
<CustomField>
    <fullName>DD__c</fullName>
    <label>DD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>