force-app/main/default/objects/Pipeline_Deal__c/fields/DD_Started_Flag__c.field-meta.xml
<CustomField>
    <fullName>DD_Started_Flag__c</fullName>
    <label>DD Started Flag</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>