force-app/main/default/objects/Pipeline_Deal__c/fields/DD_TKT__c.field-meta.xml
<CustomField>
    <fullName>DD_TKT__c</fullName>
    <label>DD TKT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>