force-app/main/default/objects/Pipeline_Deal__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>