force-app/main/default/objects/Pipeline_Deal__c/fields/Deal_Value2__c.field-meta.xml
<CustomField>
    <fullName>Deal_Value2__c</fullName>
    <label>Deal value2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>