force-app/main/default/objects/Pipeline_Deal__c/fields/Deal_Value_EUR__c.field-meta.xml
<CustomField>
    <fullName>Deal_Value_EUR__c</fullName>
    <label>Deal Value (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>