force-app/main/default/objects/Pipeline_Deal__c/fields/Entity_Company_Info__c.field-meta.xml
<CustomField>
    <fullName>Entity_Company_Info__c</fullName>
    <label>Entity &amp; Company Info</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>