force-app/main/default/objects/Pipeline_Deal__c/fields/Evo__c.field-meta.xml
<CustomField>
    <fullName>Evo__c</fullName>
    <label>Evo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>