force-app/main/default/objects/Pipeline_Deal__c/fields/Go_Live_Flag__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Flag__c</fullName>
    <label>Go Live Flag</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>