force-app/main/default/objects/Pipeline_Deal__c/fields/Go_Live_Status__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Status__c</fullName>
    <label>Go Live Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>