force-app/main/default/objects/Pipeline_Deal__c/fields/Handover__c.field-meta.xml
<CustomField>
    <fullName>Handover__c</fullName>
    <label>Handover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>