force-app/main/default/objects/Pipeline_Deal__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>