force-app/main/default/objects/Pipeline_Deal__c/fields/Integration_Email__c.field-meta.xml
<CustomField>
    <fullName>Integration_Email__c</fullName>
    <label>Integration email</label>
    <length>80</length>
    <type>Email</type>
</CustomField>