force-app/main/default/objects/Pipeline_Deal__c/fields/Integration_Started_Flag__c.field-meta.xml
<CustomField>
    <fullName>Integration_Started_Flag__c</fullName>
    <label>Integration Started Flag</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>