force-app/main/default/objects/Pipeline_Deal__c/fields/Jira__c.field-meta.xml
<CustomField>
    <fullName>Jira__c</fullName>
    <label>Jira</label>
    <length>255</length>
    <type>Url</type>
</CustomField>