force-app/main/default/objects/Pipeline_Deal__c/fields/Last_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up__c</fullName>
    <label>Last follow up</label>
    <type>Date</type>
</CustomField>