force-app/main/default/objects/Pipeline_Deal__c/fields/Lead_Flag__c.field-meta.xml
<CustomField>
    <fullName>Lead_Flag__c</fullName>
    <label>Lead Flag</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>