force-app/main/default/objects/Pipeline_Deal__c/fields/Live_Since__c.field-meta.xml
<CustomField>
    <fullName>Live_Since__c</fullName>
    <label>Live since</label>
    <type>Date</type>
</CustomField>