force-app/main/default/objects/Pipeline_Deal__c/fields/Mo__c.field-meta.xml
<CustomField>
    <fullName>Mo__c</fullName>
    <label>mo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>