force-app/main/default/objects/Pipeline_Deal__c/fields/Signed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Signed_Flag__c</fullName>
    <label>Signed Flag</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>