force-app/main/default/objects/Pipeline_Deal__c/fields/Signing_ETA__c.field-meta.xml
<CustomField>
    <fullName>Signing_ETA__c</fullName>
    <label>Signing ETA</label>
    <type>Date</type>
</CustomField>