force-app/main/default/objects/Pipeline_Deal__c/fields/Signing_Month__c.field-meta.xml
<CustomField>
    <fullName>Signing_Month__c</fullName>
    <label>Signing Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>