force-app/main/default/objects/Pipeline_Deal__c/fields/Signing_Year__c.field-meta.xml
<CustomField>
    <fullName>Signing_Year__c</fullName>
    <label>Signing Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>