force-app/main/default/objects/Pipeline_Deal__c/fields/Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Status_Text__c</fullName>
    <label>Status Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>