force-app/main/default/objects/Pipeline_Deal__c/fields/Updates__c.field-meta.xml
<CustomField>
    <fullName>Updates__c</fullName>
    <label>Updates</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>