force-app/main/default/objects/Pipeline_Deal__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Url</type>
</CustomField>